Add loadConfigFile method